--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -20,13 +20,14 @@
 				<a href="#" class="list-group-item list-group-item-action <%= isActive('index') %>">最新消息</a>
 				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">學校資料</a>
 				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">系所資料</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">學士班</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">碩士班</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">博士班</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">港二技</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">學士班、港二技</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">碩士班</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">博士班</a>
+				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班</a>
+				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
+				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
+				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">港二技</a>
+				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">名額分配</a>
+				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班、港二技</a>
+				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
+				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
 				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">帳號管理</a>
 			</div>
 		</div>
