--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,7 +1,12 @@
 #sidebar #menu .list-group-item {
 	border: 0px solid !important;
 }
+
+#sidebar #menu .list-group-item.sub {
+	font-size: 10px;
+	padding-left: 30px;
+}
+
 #sidebar #menu .list-group-item.active {
 	border-radius: 10px !important;
 }
-
