--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -3,43 +3,54 @@
 		return current.source == page ? 'active' : '';
 	}
 %>
-<div id="sidebar">
-	<div class="row">
-		<div class="col-3">
-			<img src="http://www.overseas.ncnu.edu.tw/film/images/logo2014.png" alt="overseas" width="100%">
-		</div>
-		<div class="col-9 text-sm">
-			<small>海外聯招會委員學校平台</small><br />
-			簡章調查系統
-		</div>
-	</div>
-	<hr />
-	<div class="row">
-		<div class="col-12">
-			<div id="menu" class="list-group">
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('index') %>">最新消息</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">學校資料</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">系所資料</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">港二技</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">名額分配</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班、港二技</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
-				<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">帳號管理</a>
+<div class="row">
+	<button id="btn-toggle" class="btn btn-sm btn-secondary">
+		<i class="fa fa-bars" aria-hidden="true"></i>
+	</button>
+	<div id="sidebarWrap" class="col-3 col-lg-2">
+		<div id="sidebar">
+			<div class="row">
+				<div class="col-xl-3">
+					<img src="http://www.overseas.ncnu.edu.tw/film/images/logo2014.png" alt="overseas" width="100%">
+				</div>
+				<div class="col-xl-9">
+					<small>海外聯招會委員學校平台</small><br />
+					簡章調查系統
+				</div>
+			</div>
+			<hr />
+			<div class="row">
+				<div class="col-12">
+					<div id="menu" class="list-group">
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('index') %>">最新消息</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">學校資料</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">系所資料</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">港二技</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">名額分配</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班、港二技</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">帳號管理</a>
+					</div>
+				</div>
+			</div>
+			<hr />
+			<div class="row">
+				<div class="col-md-12">
+					<h5>帳號資訊</h5>
+					<div>國立暨南國際大學</div>
+					<div>吳富悅</div><br />
+					<button class="btn btn-secondary btn-block">登出</button>
+				</div>
 			</div>
 		</div>
 	</div>
-	<hr />
-	<div class="row">
-		<div class="col-12">
-			<h5>帳號資訊</h5>
-			<div>國立暨南國際大學</div>
-			<div>吳富悅</div><br />
-			<button class="btn btn-secondary btn-block">登出</button>
-		</div>
+	<div class="col-md-9 col-lg-10">
+		<%- yield %>
 	</div>
 </div>
 <link rel="stylesheet" href="css/sidebar.css">
+<script src="js/sidebar.js"></script>
