add schoolInfo route

--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -22,8 +22,8 @@
 			<div class="row">
 				<div class="col-12">
 					<div id="menu" class="list-group">
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('index') %>">最新消息</a>
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">學校資料</a>
+						<a href="./index.html" class="list-group-item list-group-item-action <%= isActive('index') %>">最新消息</a>
+						<a href="./schoolInfo.html" class="list-group-item list-group-item-action <%= isActive('schoolInfo') %>">學校資料</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">系所資料</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
