--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -1,1 +1,195 @@
-<h1>schoolInfo</h1>
+<form>
+	<div class="row">
+		<div class="form-group col-6">
+			<div class="input-group">
+				<span class="input-group-addon">學校代碼</span>
+				<input type="text" class="form-control" disabled>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-6">
+			<label for="">學校中文名稱</label>
+			<input type="text" class="form-control" disabled>
+		</div>
+		<div class="form-group col-6">
+			<label for="">學校英文名稱</label>
+			<input type="text" class="form-control" disabled>
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-6">
+			<label for="">學校電話號碼*</label>
+			<div class="input-group">
+				<span class="input-group-addon">+886</span>
+				<input type="text" class="form-control">
+			</div>
+		</div>
+		<div class="form-group col-6">
+			<label for="">學校傳真號碼*</label>
+			<div class="input-group">
+				<span class="input-group-addon">+886</span>
+				<input type="text" class="form-control">
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-6">
+			<label for="">學校中文網址*</label>
+			<input type="text" class="form-control">
+		</div>
+		<div class="form-group col-6">
+			<label for="">學校英文網址*</label>
+			<input type="text" class="form-control">
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-12">
+			<label for="">學校中文地址*</label>
+			<input type="text" class="form-control">
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-12">
+			<label for="">學校英文地址*</label>
+			<input type="text" class="form-control">
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-6">
+			<label for="">承辦單位中文名稱*</label>
+			<input type="text" class="form-control">
+		</div>
+		<div class="form-group col-6">
+			<label for="">承辦單位英文名稱*</label>
+			<input type="text" class="form-control">
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-12">
+			<label for="">宿舍中文說明*</label>
+			<textarea type="text" class="form-control"></textarea>
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-12">
+			<label for="">宿舍英文說明*</label>
+			<textarea type="text" class="form-control"></textarea>
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-12">
+			<div class="card">
+				<div class="card-header bg-primary text-white">
+					僑生專屬獎學金
+				</div>
+				<div class="card-block">
+					<form>
+						<div class="row">
+							<div class="form-group col-6">
+								<div class="input-group">
+									<span class="input-group-addon"><input type="checkbox"></span>
+									<input type="text" class="form-control" value="是否招收中五生*" disabled>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-6">
+								<label for="">獎學金負責單位中文名稱*</label>
+								<input type="text" class="form-control">
+							</div>
+							<div class="form-group col-6">
+								<label for="">獎學金負責單位英文名稱</label>
+								<input type="text" class="form-control">
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-6">
+								<label for="">僑生專屬獎學金中文說明網址</label>
+								<input type="text" class="form-control">
+							</div>
+							<div class="form-group col-6">
+								<label for="">僑生專屬獎學金英文說明網址</label>
+								<input type="text" class="form-control">
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-12">
+			<div class="card">
+				<div class="card-header bg-primary text-white">
+					中五生招收
+				</div>
+				<div class="card-block">
+					<form>
+						<div class="row">
+							<div class="form-group col-6">
+								<div class="input-group">
+									<span class="input-group-addon"><input type="checkbox"></span>
+									<input type="text" class="form-control" value="是否招收中五生*" disabled>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-12">
+								<label for="">學則*</label>
+								<textarea type="text" class="form-control"></textarea>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-12">
+								<label for="">學則文件電子檔</label>
+								<input type="file" class="form-control">
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="form-group col-12">
+			<div class="card">
+				<div class="card-header bg-primary text-white">
+					自主招生
+				</div>
+				<div class="card-block">
+					<form>
+						<div class="row">
+							<div class="form-group col-6">
+								<div class="input-group">
+									<span class="input-group-addon"><input type="checkbox"></span>
+									<input type="text" class="form-control" value="是否自主招生*" disabled>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-12">
+								<label for="">自招核定文號</label>
+								<input type="text" class="form-control">
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-12">
+								<label for="">自招核定公文電子檔</label>
+								<input type="file" class="form-control">
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-6">
+			<button class="btn btn-primary btn-block">儲存</button>
+		</div>
+		<div class="col-6">
+			<button class="btn btn-danger btn-block">送出</button>
+		</div>
+	</div>
+</form>
