--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-md-9 col-lg-10">
+	<div id="pageContent" class="col-md-9 col-lg-10">
 		<%- yield %>
 	</div>
 </div>
