--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -20,6 +20,10 @@
 	display: none;
 }
 
+#pageContent {
+	margin-bottom: 50px;
+}
+
 @media screen and (max-width: 767px) {
 	#sidebarWrap {
 		background: #fff;
@@ -28,7 +32,7 @@
 		position: absolute;
 		left: -100%;
 		transition: left .5s;
-		z-index: 1;
+		z-index: 10;
 	}
 
 	#sidebarWrap.open {
