fix wrong field title

--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -89,7 +89,7 @@
 							<div class="form-group col-6">
 								<div class="input-group">
 									<span class="input-group-addon"><input type="checkbox"></span>
-									<input type="text" class="form-control" value="是否招收中五生*" disabled>
+									<input type="text" class="form-control" value="是否提供僑生專屬獎學金*" disabled>
 								</div>
 							</div>
 						</div>
