加入審閱意見欄位

--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -1,3 +1,19 @@
+<div class="card">
+	<h3 class="card-header bg-warning text-white">審閱建議</h3>
+	<div class="card-block">
+		<h4 class="card-title">
+			<div class="input-group" style="width: 200px">
+				<span class="input-group-addon"><i class="fa fa-user" aria-hidden="true"></i></span>
+				<input type="text" class="form-control" value="吳富悅" disabled>
+			</div>
+		</h4>
+		<small class="form-text text-muted">審閱時間：2017/03/23 15:21:24</small>
+		<p class="card-text">於接變本區我都成滿會病良，喜說南地血道的得處長少我際了各中車富氣可出是無學沒大花相親的自，空業是還：即年黨早目所比，主線形布保難面輕合中共？中全必量識為的星然能子出送來：式一動現管中光裡客響著之。小出。
+
+物問親一人破正有散！進下也狀教燈友海，節心車的……全年公以會這洲境友：手非案樣賽形十晚面我有長夫，解我太，頭課不這要部爾，生打人同陸面我，由從行素得該；不制聽了……爭財能。會自城的來的種黃成不的行。高性世許朋顧市洋。引北念！沒然居在停燈裡回不著而眼看，不工是血劇行支馬然第許照一已念們表是我！</p>
+	</div>
+</div>
+<hr />
 <form>
 	<div class="row">
 		<div class="form-group col-6">
