Login Page for school. layout 預設有綁 sidebar， login 有設定為不顯示 sidebar。

--- a/_layout.ejs
+++ b/_layout.ejs
@@ -17,7 +17,12 @@
 </head>
 <body>
 	<div id="app" class="container-fluid">
-		<%- partial("components/_sidebar")%>
+		<% if (current.source != 'login') { -%>
+			<%- partial("components/_sidebar")%>
+		<% } else { -%>
+			<%- partial("login")%>
+		<% } -%>
+		
 	</div>
 	<script src="js/<%= current.source %>.js"></script>
 </body>
