--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -43,6 +43,7 @@
 					<h5>帳號資訊</h5>
 					<div>國立暨南國際大學</div>
 					<div>吳富悅</div><br />
+					<button id="btn-editAccount" class="btn btn-secondary btn-block">編輯</button>
 					<button class="btn btn-secondary btn-block">登出</button>
 				</div>
 			</div>
@@ -53,4 +54,5 @@
 	</div>
 </div>
 <link rel="stylesheet" href="css/sidebar.css">
+<script src="js/accountEditModal.js"></script>
 <script src="js/sidebar.js"></script>
