add account management page

--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -33,7 +33,7 @@
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班、港二技</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">帳號管理</a>
+						<a href="./account.html" class="list-group-item list-group-item-action <%= isActive('account') %>">帳號管理</a>
 					</div>
 				</div>
 			</div>
