--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -24,7 +24,7 @@
 					<div id="menu" class="list-group">
 						<a href="./index.html" class="list-group-item list-group-item-action <%= isActive('index') %>">最新消息</a>
 						<a href="./schoolInfo.html" class="list-group-item list-group-item-action <%= isActive('schoolInfo') %>">學校資料</a>
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">系所資料</a>
+						<a href="./deptInfo.html" class="list-group-item list-group-item-action <%= isActive('deptInfo') %>">系所資料</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
