--- a/deptInfo.ejs
+++ b/deptInfo.ejs
@@ -21,11 +21,9 @@ It is a long established fact that a reader will be distracted by the readable c
 		<h2>系所列表</h2>
 	</div>
 	<div class="col-md-5 col-6 text-right">
-		<form>
-			<div class="form-group">
-				<input onkeyup="deptFilter()" id="dept-filter-input" class="form-control" type="text" placeholder="搜尋">
-			</div>
-		</form>
+		<div class="form-group">
+			<input id="dept-filter-input" class="form-control" type="text" placeholder="搜尋">
+		</div>
 	</div>
 </div>
 
