調整 sidebar，名額分配的學士、二技拆開了

--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -26,11 +26,12 @@
 						<a href="./schoolInfo.html" class="list-group-item list-group-item-action <%= isActive('schoolInfo') %>">學校資料</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">系所資料</a>
 						<a href="./deptInfoBache.html" class="list-group-item list-group-item-action <%= isActive('deptInfoBache') %> sub">學士班</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">港二技</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">港二技</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">名額分配</a>
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班、港二技</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班</a>
+						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">港二技</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
 						<a href="./account.html" class="list-group-item list-group-item-action <%= isActive('account') %>">帳號管理</a>
