Add modal. 包含基本架構， 聯招人數計算邏輯（個人申請人數＋聯合分發人數）

--- a/deptInfo.ejs
+++ b/deptInfo.ejs
@@ -1,17 +1,16 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
 
 <h2>學制資訊</h2>
 <form>
 	<div class="form-group">
 		<label for="">中文備註</label>
-		<textarea type="text" class="form-control" rows="6">
-一、校址：文學院、理學院、社會科學院、工學院、生物資源暨農學院、管理學院、生命科學院、電機資訊學 院及法律學院位於台北市羅斯福路4段1號、哲學系及人類學系位於台北市思源街18號、醫學院位於台北市仁 愛路1段1號、公共衛生學院位於台北市徐州路17號。二、電話：文學院、理學院、工學院、生物資源暨農學 院、管理學院、生命科學院、電機資訊學院(02)33663366、社會科學院(02)33668300、政治學系 (02)33668450、經濟學系(02)33668440、法律學院(02)33668900 、醫學院(02)23123456、公共衛生學院 (02)33668012。 
+		<textarea type="text" class="form-control" rows="6">一、校址：文學院、理學院、社會科學院、工學院、生物資源暨農學院、管理學院、生命科學院、電機資訊學 院及法律學院位於台北市羅斯福路4段1號、哲學系及人類學系位於台北市思源街18號、醫學院位於台北市仁 愛路1段1號、公共衛生學院位於台北市徐州路17號。二、電話：文學院、理學院、工學院、生物資源暨農學 院、管理學院、生命科學院、電機資訊學院(02)33663366、社會科學院(02)33668300、政治學系 (02)33668450、經濟學系(02)33668440、法律學院(02)33668900 、醫學院(02)23123456、公共衛生學院 (02)33668012。 
 		</textarea>
 	</div>
 	<div class="form-group">
 		<label for="">英文備註</label>
-		<textarea type="text" class="form-control" rows="6">
-It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+		<textarea type="text" class="form-control" rows="6">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
 		</textarea>
 	</div>
 </form>
@@ -41,7 +40,7 @@ It is a long established fact that a reader will be distracted by the readable c
 	</thead>
 	<tbody>
 		<tr>
-			<td><i class="fa fa-pencil" aria-hidden="true"></i></td>
+			<td><span class="btn-editDeptInfo"><i class="fa fa-pencil" aria-hidden="true"></i></span></td>
 			<td>0</td>
 			<td>5HW01</td>
 			<td>
@@ -53,7 +52,7 @@ It is a long established fact that a reader will be distracted by the readable c
 			<td>03月15日 18:56:23 (2017)</td>
 		</tr>
 		<tr>
-			<td><i class="fa fa-pencil" aria-hidden="true"></i></td>
+			<td><span class="btn-editDeptInfo"><i class="fa fa-pencil" aria-hidden="true"></i></span></td>
 			<td>1</td>
 			<td>5HW02</td>
 			<td>
@@ -65,7 +64,7 @@ It is a long established fact that a reader will be distracted by the readable c
 			<td>03月15日 18:56:23 (2017)</td>
 		</tr>
 		<tr>
-			<td><i class="fa fa-pencil" aria-hidden="true"></i></td>
+			<td><span class="btn-editDeptInfo"><i class="fa fa-pencil" aria-hidden="true"></i></span></td>
 			<td>2</td>
 			<td>5HW03</td>
 			<td>
@@ -77,7 +76,7 @@ It is a long established fact that a reader will be distracted by the readable c
 			<td>03月15日 17:56:23 (2017)</td>
 		</tr>
 		<tr>
-			<td><i class="fa fa-pencil" aria-hidden="true"></i></td>
+			<td><span class="btn-editDeptInfo"><i class="fa fa-pencil" aria-hidden="true"></i></span></td>
 			<td>3</td>
 			<td>5HW04</td>
 			<td>
@@ -91,4 +90,379 @@ It is a long established fact that a reader will be distracted by the readable c
 	</tbody>
 </table>
 
+<div class="modal fade" id="editDeptInfoModal" tabindex="-1" role="dialog" aria-labelledby="editDeptInfoTitle" aria-hidden="true">
+	<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-content">
+
+			<div class="modal-header">
+				<h5 class="modal-title" id="editDeptInfoTitle">
+					系所詳細資料
+					<!-- 以下三個 badge 依照該系所資料狀態做顯示 -->
+					<span class="badge badge-pill badge-primary">編輯中</span>
+					<span class="badge badge-pill badge-info">已送出</span>
+					<span class="badge badge-pill badge-success">已確認</span>
+				</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+
+			<div class="modal-body">
+				<div class="container-fluid">
+
+					<div class="row">
+						<div class="col">
+							<div class="card">
+								<h3 class="card-header bg-warning text-white">審閱建議</h3>
+								<div class="card-block">
+									<h4 class="card-title">
+										<div class="input-group" style="width: 200px">
+											<span class="input-group-addon"><i class="fa fa-user" aria-hidden="true"></i></span>
+											<input type="text" class="form-control" value="吳和融" disabled>
+										</div>
+									</h4>
+									<small class="form-text text-muted">審閱時間：2017/03/23 15:21:24</small>
+									<p class="card-text">，小一能，法減指河相到子任我班，排學一得特其背。太聽叫打期此登兒位；美指持視！然意團。你必世起度色一的來思正長：外了河明文國！環點音己法請：非見例道有的社為名方所進</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<form>
+						<div class="row">
+							<div class="form-group col-6">
+								<div class="input-group">
+									<span class="input-group-addon">簡章順序</span>
+									<input type="text" class="form-control" value="12" disabled>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-6">
+								<div class="input-group">
+									<span class="input-group-addon">系所代碼</span>
+									<input type="text" class="form-control" value="10101" disabled>
+								</div>
+							</div>
+							<div class="form-group col-6">
+								<div class="input-group">
+									<span class="input-group-addon">讀卡代碼</span>
+									<input type="text" class="form-control" value="1001" disabled>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-6">
+								<label for="">中文名稱</label>
+								<input type="text" class="form-control" value="資訊管理學系" disabled>
+							</div>
+							<div class="form-group col-6">
+								<label for="">英文名稱</label>
+								<input type="text" class="form-control" value="Information Management" disabled>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-6">
+								<label for="">系中文網站網址*</label>
+								<input type="text" class="form-control" value="http://www.im.ncnu.edu.tw">
+							</div>
+							<div class="form-group col-6">
+								<label for="">系英文網站網址*</label>
+								<input type="text" class="form-control" value="http://www.im.ncnu.edu.tw/en">
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-6">
+								<label for="">主要隸屬學群*</label>
+								<select class="form-control">
+									<option>主要學群</option>
+								</select>
+							</div>
+							<div class="form-group col-6">
+								<label for="">次要隸屬學群</label>
+								<select class="form-control">
+									<option>次要學群</option>
+								</select>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-6">
+								<label for="">招收性別限制*</label>
+								<select class="form-control">
+									<option value="null">男女兼收</option>
+									<option value="M">限男</option>
+									<option value="F">限女</option>
+								</select>
+							</div>
+							<div class="form-group col-6">
+								<label for="">最近一次系所評鑑*</label>
+								<select class="form-control">
+									<option>系所評鑑</option>
+								</select>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col">
+								<label for="">選系中文說明*</label>
+								<textarea class="form-control" rows="4">(一)強烈建議中文程度應達「華語文能力測 驗」(TOP)第4級以上。(二)本系課程須閱 讀大量中文古籍與歷史資料，文言文閱讀 能力不佳者，請勿選填本系。</textarea>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col">
+								<label for="">選系英文說明*</label>
+								<textarea class="form-control" rows="4">At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quosdolores et quas molestias excepturi sint, obcaecati cupiditate non provident, </textarea>
+							</div>
+						</div>
+						<!-- 僅在 碩、博、二技 時顯示，選擇為學士則消失 -->
+						<div class="row">
+							<div class="form-group col-6">
+								<label for="">聯招(個人申請)人數（碩博二技專用）</label>
+								<input type="text" class="form-control" value="10">
+							</div>
+						</div>
+						<!-- 僅在 學士 時顯示，選擇為 碩、博、二技 則消失 -->
+						<div class="row">
+							<div class="form-group col-4">
+								<label for="">聯招人數（學士專用）</label>
+								<input type="text" class="form-control" id="bachelorTotalPeople" disabled>
+							</div>
+							<div class="form-group col-1">
+								<label>　</label>
+								<p class="form-control-static">＝</p>
+							</div>
+							<div class="form-group col-3">
+								<label for="">個人申請人數</label>
+								<input type="text" class="form-control" id="bachelorPersonalApply">
+							</div>
+							<div class="form-group col-1">
+								<label for="">　</label>
+								<p class="form-control-static">＋</p>
+							</div>
+							<div class="form-group col-3">
+								<label for="">聯合分發人數</label>
+								<input type="text" class="form-control" id="bachelorDistribution">
+							</div>
+						</div>
+					</form>
+					<div class="row">
+						<div class="col">
+							<div class="card">
+								<div class="card-header bg-primary text-white">
+									單獨招收僑生（自招）（學碩博專用）
+								</div>
+								<div class="card-block">
+									<form>
+										<div class="row">
+											<div class="col">
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" value="">
+														本校是否可單獨招收僑生
+													</label>
+												</div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col col-lg-4">
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" value="">
+														本校是否可單獨招收僑生
+													</label>
+												</div>
+											</div>
+											<div class="col col-lg-4">
+												<div class="form-group">
+													<label for="">自招人數</label>
+													<input type="text" class="form-control">
+												</div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col">
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" value="">
+														是否開設僑生專班（有自主招生才能開專班）
+													</label>
+												</div>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col">
+							<div class="card">
+								<div class="card-header bg-primary text-white">
+									單獨招收僑生（自招）（二技專用）
+								</div>
+								<div class="card-block">
+									<form>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												本校是否可單獨招收僑生
+											</label>
+										</div>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												是否開設日間二技學制
+											</label>
+										</div>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												是否單獨招收僑生（自招）
+											</label>
+										</div>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												是否開設僑生專班
+											</label>
+										</div>
+										<hr>
+										<div class="row">
+											<div class="col">
+												<div class="form-group">
+													<label for="">開設專班文號</label>
+													<input type="text" class="form-control" value="臺教高(四)字第1040109682號">
+												</div>
+											</div>
+											<div class="col">
+												<div class="form-group">
+													<label for="">開設專班文件電子檔</label>
+													<input type="file" class="form-control">
+												</div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-6">
+												<div class="form-group">
+													<label for="">自招人數</label>
+													<input type="text" class="form-control" value="12">
+												</div>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col">
+							<div class="card">
+								<div class="card-header bg-primary text-white">
+									審查費用
+								</div>
+								<div class="card-block">
+									<form>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												是否需要收審查費用*
+											</label>
+										</div>
+										<hr>
+										<div class="form-group">
+											<label for="">審查費用中文說明</label>
+											<textarea class="form-control" rows="3">，小一能，法減指河相到子任我班，排學一得特其背。太聽叫打期此登兒位；美指持視！然意團。你必世起度色一的來思正長：外了河明文國！環點音己法請：非見例道有的社為名方所進</textarea>
+										</div>
+										<div class="form-group">
+											<label for="">審查費用英文說明</label>
+											<textarea class="form-control" rows="3">le content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like reada</textarea>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col">
+							<div class="card">
+								<div class="card-header bg-primary text-white">
+									other
+								</div>
+								<div class="card-block">
+									<form>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												是否招收外生專班*
+											</label>
+										</div>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												是否為全英文授課*
+											</label>
+										</div>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												是否招收身障學生*
+											</label>
+										</div>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												是否招收不具華文基礎學生*
+											</label>
+										</div>
+										<div class="form-check">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox" value="">
+												是否限制出生日期*
+											</label>
+										</div>
+									</form>
+									<hr>
+									<p>限制出生日期</p>
+									<form class="form-inline">
+										<div class="form-check mb-2 mr-sm-2 mb-sm-0">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox">
+											</label>
+										</div>
+										<div class="input-group mb-2 mr-sm-2 mb-sm-0">
+											<input type="text" class="form-control">
+											<div class="input-group-addon">以後</div>
+										</div>
+									</form>
+									<form class="form-inline" style="padding-top: 20px;">
+										<div class="form-check mb-2 mr-sm-2 mb-sm-0">
+											<label class="form-check-label">
+												<input class="form-check-input" type="checkbox">
+											</label>
+										</div>
+										<div class="input-group mb-2 mr-sm-2 mb-sm-0">
+											<input type="text" class="form-control">
+											<div class="input-group-addon">以前</div>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+			<div class="modal-footer">
+				<!-- 「確認送出」後，block 住 form -->
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+				<button type="button" class="btn btn-success">確認送出</button>
+				<button type="button" class="btn btn-primary">儲存</button>
+			</div>
+
+		</div>
+	</div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
