增加審查項目。

--- a/deptInfoBache.ejs
+++ b/deptInfoBache.ejs
@@ -1,5 +1,4 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
 
 <h2>學制資訊</h2>
 <form>
@@ -450,6 +449,15 @@
 						</div>
 					</div>
 
+					<hr>
+					
+					<form id="form-reviewItems">
+						<!-- 審查項目 -->
+					</form>
+
+					<!-- Indicates a successful or positive action -->
+					<button type="button" class="btn btn-success" id="btn-addReviewItem">新增更多審查項目</button>
+
 				</div>
 			</div>
 
@@ -465,4 +473,4 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
+
