--- a/login.ejs
+++ b/login.ejs
@@ -18,7 +18,7 @@
 					<span class="input-group-addon" id="basic-addon1">
 						<i class="fa fa-user" aria-hidden="true"></i>
 					</span>
-					<input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+					<input type="text" id="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
 				</div>
 			</div>
 			<div class="form-group">
@@ -26,7 +26,7 @@
 					<span class="input-group-addon" id="basic-addon1">
 						<i class="fa fa-unlock-alt" aria-hidden="true"></i>
 					</span>
-					<input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+					<input type="password" id="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
 				</div>
 			</div>
 			<div class="form-group">
@@ -35,7 +35,10 @@
 				</p>
 			</div>
 			<div class="form-group">
-				<button type="button" class="btn btn-success btn-block">Log In</button>
+				<button type="button" class="btn btn-success btn-block" id="btn-login">Log In</button>
+			</div>
+			<div class="form-group">
+				<p id="errMsg"></p>
 			</div>
 		</form>
 	</div>
