--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -45,7 +45,7 @@
 					<div>國立暨南國際大學</div>
 					<div>吳富悅</div><br />
 					<button id="btn-editAccount" class="btn btn-secondary btn-block">編輯</button>
-					<button class="btn btn-secondary btn-block">登出</button>
+					<button id="btn-logout" class="btn btn-secondary btn-block">登出</button>
 				</div>
 			</div>
 		</div>
