--- a/login.ejs
+++ b/login.ejs
@@ -36,6 +36,7 @@
 			</div>
 			<div class="form-group">
 				<button type="button" class="btn btn-success btn-block" id="btn-login">Log In</button>
+				<button type="button" class="btn btn-success btn-block" id="getStatus">status</button>
 			</div>
 			<div class="form-group">
 				<p id="errMsg"></p>
