--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -30,7 +30,7 @@
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
 						<a href="#" class="list-group-item list-group-item-action category">名額分配</a>
-						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">學士班</a>
+						<a href="./quotaDistributionBache.html" class="list-group-item list-group-item-action <%= isActive('quotaDistributionBache') %> sub">學士班</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">港二技</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">碩士班</a>
 						<a href="#" class="list-group-item list-group-item-action <%= isActive('') %> sub">博士班</a>
