把 user 相關 api 整理起來; 沒登入轉跳到登入頁面; 顯示 sidebar 上的使用者資訊 我拿不到隸屬學校 於是洗洗睡

--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -42,8 +42,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h5>帳號資訊</h5>
-					<div>國立暨南國際大學</div>
-					<div>吳富悅</div><br />
+					<div id="userSchool">國立暨南國際大學</div>
+					<div id="userName">吳富悅</div><br />
 					<button id="btn-editAccount" class="btn btn-secondary btn-block">編輯</button>
 					<button id="btn-logout" class="btn btn-secondary btn-block">登出</button>
 				</div>
