--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -14,65 +14,65 @@
 	</div>
 	<hr>
 </div>
-<form>
+<form id="form-schoolInfo">
 	<div class="row">
 		<div class="form-group col-6">
 			<div class="input-group">
 				<span class="input-group-addon">學校代碼</span>
-				<input type="text" id="school-id" class="form-control" disabled>
+				<input type="text" id="schoolId" class="form-control" disabled>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="form-group col-6">
 			<label for="">學校中文名稱</label>
-			<input type="text" class="form-control" disabled>
+			<input id="title" type="text" class="form-control" disabled>
 		</div>
 		<div class="form-group col-6">
 			<label for="">學校英文名稱</label>
-			<input type="text" class="form-control" disabled>
+			<input id="engTitle" type="text" class="form-control" disabled>
 		</div>
 	</div>
 	<div class="row">
 		<div class="form-group col-6">
 			<label for="">學校電話號碼*</label>
-			<input type="text" class="form-control">
+			<input id="phone" type="text" class="form-control">
 		</div>
 		<div class="form-group col-6">
 			<label for="">學校傳真號碼*</label>
-			<input type="text" class="form-control">
+			<input id="fax" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
 		<div class="form-group col-6">
 			<label for="">學校中文網址*</label>
-			<input type="text" class="form-control">
+			<input id="url" type="text" class="form-control">
 		</div>
 		<div class="form-group col-6">
 			<label for="">學校英文網址*</label>
-			<input type="text" class="form-control">
+			<input id="engUrl" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
 		<div class="form-group col-12">
 			<label for="">學校中文地址*</label>
-			<input type="text" class="form-control">
+			<input id="address" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
 		<div class="form-group col-12">
 			<label for="">學校英文地址*</label>
-			<input type="text" class="form-control">
+			<input id="engAddress" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
 		<div class="form-group col-6">
 			<label for="">承辦單位中文名稱*</label>
-			<input type="text" class="form-control">
+			<input id="organization" type="text" class="form-control">
 		</div>
 		<div class="form-group col-6">
 			<label for="">承辦單位英文名稱*</label>
-			<input type="text" class="form-control">
+			<input id="engOrganization" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
