--- a/schoolInfo.ejs
+++ b/schoolInfo.ejs
@@ -75,18 +75,41 @@
 			<input id="engOrganization" type="text" class="form-control">
 		</div>
 	</div>
+
 	<div class="row">
 		<div class="form-group col-12">
-			<label for="">宿舍中文說明*</label>
-			<textarea type="text" class="form-control"></textarea>
+			<div class="card">
+				<div class="card-header bg-primary text-white">
+					宿舍
+				</div>
+				<div class="card-block">
+					<form>
+						<div class="row">
+							<div class="form-group col-6">
+								<div class="input-group">
+									<span class="input-group-addon"><input type="checkbox"></span>
+									<input type="text" class="form-control" value="是否提供宿舍*" disabled>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-12">
+								<label for="">宿舍中文說明</label>
+								<input type="text" class="form-control">
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-12">
+								<label for="">宿舍英文說明</label>
+								<input type="text" class="form-control">
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="form-group col-12">
-			<label for="">宿舍英文說明*</label>
-			<textarea type="text" class="form-control"></textarea>
-		</div>
-	</div>
+
 	<div class="row">
 		<div class="form-group col-12">
 			<div class="card">
@@ -105,7 +128,7 @@
 						</div>
 						<div class="row">
 							<div class="form-group col-6">
-								<label for="">獎學金負責單位中文名稱*</label>
+								<label for="">獎學金負責單位中文名稱</label>
 								<input type="text" class="form-control">
 							</div>
 							<div class="form-group col-6">
@@ -165,7 +188,7 @@
 		<div class="form-group col-12">
 			<div class="card">
 				<div class="card-header bg-primary text-white">
-					自主招生
+					單獨招收僑生（自招）
 				</div>
 				<div class="card-block">
 					<form>
@@ -173,7 +196,7 @@
 							<div class="form-group col-6">
 								<div class="input-group">
 									<span class="input-group-addon"><input type="checkbox"></span>
-									<input type="text" class="form-control" value="是否自主招生*" disabled>
+									<input type="text" class="form-control" value="是否單獨招收僑生（自招）*" disabled>
 								</div>
 							</div>
 						</div>
